--- a/zerops.yml
+++ b/zerops.yml
@@ -4,7 +4,7 @@ zerops:
       prepareCommands:
         - curl -fsSL https://bun.sh/install | bash
       buildCommands:
-        - /root/.bun/bin/bun install --production
+        - /root/.bun/bin/bun install
         - /root/.bun/bin/bun run build
       deploy:
         - ./build
