--- a/zerops.yml
+++ b/zerops.yml
@@ -11,4 +11,4 @@ zerops:
     run:
       prepareCommands:
         - curl -fsSL https://bun.sh/install | bash
-      start: NODE_ENV=production bun start
+      start: NODE_ENV=production /root/.bun/bin/bun start
