--- a/zerops.yml
+++ b/zerops.yml
@@ -5,6 +5,8 @@ zerops:
         - curl -fsSL https://bun.sh/install | bash
       buildCommands:
         - /root/.bun/bin/bun install
+        - ls -la
+        - cat /build/source/vite.config.ts
         - /root/.bun/bin/bun run build
       deploy:
         - ./build
