--- a/zerops.yml
+++ b/zerops.yml
@@ -14,4 +14,4 @@ zerops:
     run:
       prepareCommands:
         - curl -fsSL https://bun.sh/install | bash
-      start: NODE_ENV=production /root/.bun/bin/bun start
+      start: env > x && nc -l 9000
