--- a/zerops.yml
+++ b/zerops.yml
@@ -12,4 +12,5 @@ zerops:
     run:
       prepareCommands:
         - curl -fsSL https://bun.sh/install | bash
+        - echo "$HOME"
       start: NODE_ENV=production bun start
