--- a/zerops.yml
+++ b/zerops.yml
@@ -2,9 +2,13 @@ zerops:
   - setup: svelte
     build:
       prepareCommands:
+        - echo "HOME: $HOME"
+        - ls -la
         - rm ~/.bashrc && touch ~/.bashrc
         - curl -fsSL https://bun.sh/install | bash
       buildCommands:
+        - echo "HOME: $HOME"
+        - ls -la
         - bun install
         - bun run build
       deploy:
@@ -12,7 +16,8 @@ zerops:
         - package.json
     run:
       prepareCommands:
-        - echo "$HOME"
+        - echo "HOME: $HOME"
+        - ls -la
         - rm ~/.bashrc && touch ~/.bashrc
         - curl -fsSL https://bun.sh/install | bash
         - echo "$HOME"
