--- a/zerops.yml
+++ b/zerops.yml
@@ -2,12 +2,12 @@ zerops:
   - setup: svelte
     build:
       prepareCommands:
-        - echo "HOME: $HOME"
+        - "echo \"HOME: $HOME\""
         - ls -la
         - rm ~/.bashrc && touch ~/.bashrc
         - curl -fsSL https://bun.sh/install | bash
       buildCommands:
-        - echo "HOME: $HOME"
+        - "echo \"HOME: $HOME\""
         - ls -la
         - bun install
         - bun run build
@@ -16,7 +16,7 @@ zerops:
         - package.json
     run:
       prepareCommands:
-        - echo "HOME: $HOME"
+        - "echo \"HOME: $HOME\""
         - ls -la
         - rm ~/.bashrc && touch ~/.bashrc
         - curl -fsSL https://bun.sh/install | bash
